langtools/test/tools/javac/proprietary/WarnWildcard.out
WarnWildcard.java:14:44: compiler.warn.sun.proprietary: sun.misc.FloatConsts
- compiler.err.warnings.and.werror
1 error
1 warning
